--- a/main/templates/main/index/index.html
+++ b/main/templates/main/index/index.html
@@ -10,7 +10,7 @@
     </div>
     <div class="home-recomendations">
       <div class="rec-title mb-4">
-        <h3><span>Popular Accessories</span></h3>
+        <h2><span>Popular Accessories</span></h2>
       </div>
     </div>
     <div class="home-cards d-flex gap-4">
@@ -20,11 +20,11 @@
           <h5 class = "title-card">{{ product.name }}</h5>
           {% if product.discount %}
             <div class="cart-discount d-flex gap-2">
-              <p class="line">{{ product.price }}</p>
-              <p>{{ product.sell_price }}</p>
+              <p class="line">$ {{ product.price }}</p>
+              <p>$ {{ product.sell_price }}</p>
             </div>
             {% else %}
-              <p class="price">{{ product.price }}</p>
+              <p class="price">$ {{ product.price }}</p>
           {% endif %}
         </a>
       {% endfor %}
